--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,6 @@
 streamlit
 google-generativeai
 PyPDF2
-langchain
-langchain-google-genai
-langchain-community
 faiss-cpu
-sentence-transformers
-python-dotenv
-tiktoken
+scikit-learn
+numpy
